[package]
name = "advent_2021"
version = "0.1.0"
authors = ["thomas <t.g.abbink@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
itertools = "0.10.0"
average = "0.10.0"
colored = "2"
ndarray = "0.15.4"
clap = { version = "3.1.6", features = ["derive"] }